# HoYo.Daily

./: .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  global.d.ts  index.html  manifest.json  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: release.yml
public/: manifest.chrome.json  manifest.firefox.json  manifest.json
src/: App.vue  background.ts  claimable.ts  main.ts  manifest.json  persistence.ts  task-registry.ts  test.py  utils.ts
src/assets/: claimable-items.json  history-items.json  style.css
src/components/: AutoClaimSetting.vue  AutoClaimToggle.vue  ClaimButton.vue  Countdown.vue  GameOption.vue  GameOptions.vue  HistoryEntry.vue  HistoryTab.vue  NotificationDropdown.vue  Switch.vue  ThemeSelector.vue  TooltipPopover.vue
src/extension/: manifest.json
src/model/: hoyolab_account.py  task_builder.py
src/popup/: output.css  popup.html  popup.js
src/scripts/: background.ts  claimable.ts  messaging.ts  storage.ts  utils.ts
src/workers/: service-worker.js
