[tool.poetry]
name = "hoyodaily"
version = "0.1.0"
description = ""
authors = ["Axyss"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
requests = "^2.32.3"
rookiepy = "^0.5.6"
pyside6 = "^6.8.0"
pywin32 = "^308"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
